--- a/src/pages/CombatPage/index.scss
+++ b/src/pages/CombatPage/index.scss
@@ -39,9 +39,13 @@
 
             .enemies {
                 display: grid;
-                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                grid-template-columns: repeat(3, 1fr);
                 gap: 1rem;
                 width: 100%;
+
+                @media (max-width: 767px) {
+                    grid-template-columns: 1fr;
+                }
 
                 .enemy {
                     background: rgba(0, 0, 0, 0.5);
